--- a/contactanos.html
+++ b/contactanos.html
@@ -1,17 +1,15 @@
-<html lang="es">
+<!DOCTYPE html>
+<html>
 <head>
-  <title>Examen</title>
-<link rel="stylesheet" type="text/css" href="dcss\uva.css"/>
-</head>
-<body>
-  <header>
-  	 <div id="logotipo">
-<img src="2.jpg" width="100" height="80" align="right"/>
-</div>
-  	<h2>Este es el sitio web de Pharmadus Botanicals</h2> <h1>Pharmadus Botanicals</h1>
-</header>
-  <nav>
-    <ul>
+	<title>contant we</title>
+<link rel="stylesheet" type="text/css" href="bootstrap.css"/>
+	<link rel="stylesheet" type="text/css" href="dcss\uva.css"/>	
+	</head>
+	<body>
+	<header><h2>Este es el sitio web de Pharmadus Botanicals</h2> <h1>Pharmadus Botanicals</h1></header>
+		<nav>
+		<nav>
+  <ul>
   <li id="pio"><a href="index.html">Home</a></li>
   &nbsp;
   <li id="pio"><a href="aboutwe.html">About company</a></li>
@@ -22,12 +20,12 @@
   &nbsp;
   </ul>
   </nav>
-  <aside>
+		<aside>
   <blockquote>Primer Elemento</blockquote>
   <blockquote>Segundo Elemento</blockquote>
   <blockquote>Tercer Elemento</blockquote>
   </aside>
-  <section>
+  <section >
     <article>
 	<figure>
 	<figcaption>¿Quienes somos?</figcaption>
