--- a/aboutwe.html
+++ b/aboutwe.html
@@ -15,42 +15,47 @@
   &nbsp;
   <li id="pio"><a href="productsand.html">Products and service </a></li>	
   &nbsp;
-  <li id="pio"><a href="contactanos.html">Contact we  </a></li>
+  <li id="pio"><a href="contactanos.html">Contact us  </a></li>
   &nbsp;
   </ul>
   </nav>
 		<aside>
-  <blockquote>Primer Elemento</blockquote>
-  <blockquote>Segundo Elemento</blockquote>
-  <blockquote>Tercer Elemento</blockquote>
+<a href="https://www.pharmadus.com/experiencia/">certificaciones</a>
+  <blockquote>Análisis de peligros y puntos críticos (APPPCC</blockquote>
+  <blockquote>Normas de correcta fabricación de medicamentos (GMPs)</blockquote>
+  <blockquote> Certificación Ecológica</blockquote>
+  <blockquote>Certificación FAIRTRADE (Comercio Justo)</blockquote>
+  <blockquote> Persona cualificada para los controles preventivos.</blockquote>
   </aside>
   <section>
     <article>
 	<figure>
-	<figcaption>¿Quienes somos?</figcaption>
+	<figcaption>"EL ARTE Y LA CIENCIA DE CREAR TISANAS ECOLÓGICAS FUNCIONALES DE GRAN SABOR Y CALIDAD"</figcaption>
 	</figure>
-    <hgroup>Misión</hgroup>
-<p>Nuestra misión es convertirnos en el centro de referencia en la innovación del mundo de las plantas en infusión,
-cultivando nuestra pasión por aprender.</p>
+  <hgroup>Historia</hgroup>
+  <p>Esta historia comienza en 1965, en Ponferrada, en un valle que huele a flores. Allí, en este lugar rodeado de naturaleza y situado en la bonita Comarca del Bierzo (León), vive la   familia Escudero.
+
+Aquí nace “Infusiones La Leonesa”, un taller artesanal que más tarde se convertiría en una instalación industrial y siempre con un objetivo claro: Cuidar de la salud de las personas a través de las infusiones.
+
+El primer producto que salió de esta nueva factoría fue Manasul: una fórmula exclusiva y eficaz para el control de peso y el estreñimiento. Manasul llegó a las tazas de millones de hogares del mundo entero. Tuvo tanto éxito que la empresa cambio de nombre y pasó a llamarse “Manasul Internacional”.
+
+Fue la primera multinacional española en plantas medicinales, con sedes en Suiza, Corea, Chile y Estados Unidos.</p>
+    <hgroup>Tradición</hgroup>
+<p>IVivir en el siglo 21 significa vivir en una era de tecnología
+e innovación. Y cuando Secundino Escudero empezó a vender
+sus remedios herbales familiares en una pequeña tienda
+de El Bierzo, no sabía el impacto que esa tienda tendría en ti.</p>
 	</article>
 	<article>
 	<hgroup>
-	Valores
+Tés & Tisanas
 	</hgroup>
-	<p>Somos un ecosistema global en el que compartir conocimientos y experiencias entre las personas interesadas en llevar una vida sana. El Amor despierta nuestra curiosidad.
-Somos una empresa permeable. Aprendemos a incorporar la inteligencia colectiva en nuestra organización. Escuchamos para aprender.
-Somos una empresa de exploradores. Rodeados de personas creativas capaces de "Desaprender para construir". Hemos aprendido a tolerar el fracaso.
-Somos una empresa íntegra, transparente y sincera.
-Buscamos autenticidad, calidad, seguridad y efectividad en lo que hacemos.
-Somos una empresa en la que la satisfacción equivale a pensar en los demás.
-Creemos que el negocio y la implicación social son partes inseparables
-Queremos aportar valor a la sociedad y fomentar la vida sana. Queremos escribir cada día una nueva historia con nuestros clientes.
-Compartir experiencias y que cada uno elija y viva la vida que quiera vivir.
-Somos una empresa que contagiamos emociones para aprender y aprendemos para cambiar.</p>
-	<hgroup>
-		Logo
-	</hgroup>
-	<img src="3.jpg" width="500" height="250" />
+	<p>Como grupo de botánicos apasionados por las plantas,
+en Pharmadus Botanicals emprendemos un viaje cargado
+de emociones y experiencias saludables a través de las infusiones.
+Un viaje de retorno a nuestras raíces, al gusto por los productos
+naturales, auténticos y honestos.</p>
+	<img src="i.jpg" width="500" height="250" />
   </section>
   <footer id="foot1">
     <p><address>Mariory Sharisa Acevedo Santos  2020, Villa Nueva, Guatemala-C. 2020. Pharmadus Botanicals</address><small>Derechos Reservados</small></p>
