--- a/contactanos.html
+++ b/contactanos.html
@@ -16,42 +16,40 @@
   &nbsp;
   <li id="pio"><a href="productsand.html">Products and service </a></li>	
   &nbsp;
-  <li id="pio"><a href="contactanos.html">Contact we  </a></li>
+  <li id="pio"><a href="contactanos.html">Contact us  </a></li>
   &nbsp;
   </ul>
   </nav>
 		<aside>
-  <blockquote>Primer Elemento</blockquote>
-  <blockquote>Segundo Elemento</blockquote>
-  <blockquote>Tercer Elemento</blockquote>
+  <a href="https://www.pharmadus.com/experiencia/">certificaciones</a>
+  <blockquote>Análisis de peligros y puntos críticos (APPPCC</blockquote>
+  <blockquote>Normas de correcta fabricación de medicamentos (GMPs)</blockquote>
+  <blockquote> Certificación Ecológica</blockquote>
+  <blockquote>Certificación FAIRTRADE (Comercio Justo)</blockquote>
+  <blockquote> Persona cualificada para los controles preventivos.</blockquote>
   </aside>
   <section >
     <article>
-	<figure>
-	<figcaption>¿Quienes somos?</figcaption>
-	</figure>
-    <hgroup>Misión</hgroup>
-<p>Nuestra misión es convertirnos en el centro de referencia en la innovación del mundo de las plantas en infusión,
-cultivando nuestra pasión por aprender.</p>
-	</article>
-	<article>
-	<hgroup>
-	Valores
-	</hgroup>
-	<p>Somos un ecosistema global en el que compartir conocimientos y experiencias entre las personas interesadas en llevar una vida sana. El Amor despierta nuestra curiosidad.
-Somos una empresa permeable. Aprendemos a incorporar la inteligencia colectiva en nuestra organización. Escuchamos para aprender.
-Somos una empresa de exploradores. Rodeados de personas creativas capaces de "Desaprender para construir". Hemos aprendido a tolerar el fracaso.
-Somos una empresa íntegra, transparente y sincera.
-Buscamos autenticidad, calidad, seguridad y efectividad en lo que hacemos.
-Somos una empresa en la que la satisfacción equivale a pensar en los demás.
-Creemos que el negocio y la implicación social son partes inseparables
-Queremos aportar valor a la sociedad y fomentar la vida sana. Queremos escribir cada día una nueva historia con nuestros clientes.
-Compartir experiencias y que cada uno elija y viva la vida que quiera vivir.
-Somos una empresa que contagiamos emociones para aprender y aprendemos para cambiar.</p>
-	<hgroup>
-		Logo
-	</hgroup>
-	<img src="3.jpg" width="500" height="250" />
+    <h1>
+    Contact details
+    </h1>
+    <hr></hr>
+        <hgroup>Here is my address:</hgroup>
+<br>
+    <ol>
+      <li>CIF: B24470171</li>
+      <li>Pol. Ind. Camponaraya, Sector 2 Parcela 3</li>
+      <li>24410 Camponaraya, León. España </li>
+      <li>T: (+34) 987 464 072 | F:  987 464 073</li>
+      <li>Whatsapp: (+34) 661 39 00 99</li>
+        <li>Whatsapp: (+34) 661 39 00 99</li>
+        <li>E-mail: info@pharmadus.com</li>
+        <li>COORDENADAS GPS:
+(Sistema Decimal): Latitud: 42.5694461 // Longitud: -6.6636452
+(Sistema Grados/Minutos/segundos)   Latitud: 42º 34' 10.005"
+// Longitud: -6º 39' 49.1214"</li>
+    </ol>
+	<img src="5.jpg" width="500" height="250" />
   </section>
   <footer id="foot1">
     <p><address>Mariory Sharisa Acevedo Santos  2020, Villa Nueva, Guatemala-C. 2020. Pharmadus Botanicals</address><small>Derechos Reservados</small></p>
