--- a/index.html
+++ b/index.html
@@ -5,36 +5,39 @@
 </head>
 <body>
   <header>
-  	 <div id="logotipo">
+  <div id="logotipo">
 <img src="2.jpg" width="100" height="80" align="right"/>
 </div>
-  	<h2>Este es el sitio web de Pharmadus Botanicals</h2> <h1>Pharmadus Botanicals</h1>
+  <h2>Este es el sitio web de Pharmadus Botanicals</h2> <h1>Pharmadus Botanicals</h1>
 </header>
   <nav>
-    <ul>
+  <ul>
   <li id="pio"><a href="index.html">Home</a></li>
   &nbsp;
   <li id="pio"><a href="aboutwe.html">About company</a></li>
   &nbsp;
   <li id="pio"><a href="productsand.html">Products and service </a></li>	
   &nbsp;
-  <li id="pio"><a href="contactanos.html">Contact we  </a></li>
+  <li id="pio"><a href="contactanos.html">Contact us  </a></li>
   &nbsp;
   </ul>
   </nav>
   <aside>
-  <blockquote>Primer Elemento</blockquote>
-  <blockquote>Segundo Elemento</blockquote>
-  <blockquote>Tercer Elemento</blockquote>
+ <a href="https://www.pharmadus.com/experiencia/">certificaciones</a>
+  <blockquote>Análisis de peligros y puntos críticos (APPPCC</blockquote>
+  <blockquote>Normas de correcta fabricación de medicamentos (GMPs)</blockquote>
+  <blockquote> Certificación Ecológica</blockquote>
+  <blockquote>Certificación FAIRTRADE (Comercio Justo)</blockquote>
+  <blockquote> Persona cualificada para los controles preventivos.</blockquote>
   </aside>
   <section>
-    <article>
+  <article>
 	<figure>
 	<figcaption>¿Quienes somos?</figcaption>
 	</figure>
-    <hgroup>Misión</hgroup>
-<p>Nuestra misión es convertirnos en el centro de referencia en la innovación del mundo de las plantas en infusión,
-cultivando nuestra pasión por aprender.</p>
+  <hgroup>Misión</hgroup>
+  <p>Nuestra misión es convertirnos en el centro de referencia en la innovación del mundo de las plantas en infusión,
+  cultivando nuestra pasión por aprender.</p>
 	</article>
 	<article>
 	<hgroup>
