--- a/productsand.html
+++ b/productsand.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<title>ours products and service</title>
-<link rel="stylesheet" type="text/css" href="bootstrap.css"/>
-	<link rel="stylesheet" type="text/css" href="dcss\uva.css"/>	
+	<link rel="stylesheet" type="text/css" href="FRE.css"/>	
 	</head>
 	<body  background="ma.gif" >
 		<header><h2>Este es el sitio web de Pharmadus Botanicals</h2> <h1>Pharmadus Botanicals</h1></header>
@@ -15,43 +14,24 @@
   &nbsp;
   <li id="pio"><a href="productsand.html">Products and service </a></li>	
   &nbsp;
-  <li id="pio"><a href="contactanos.html">Contact we  </a></li>
+  <li id="pio"><a href="contactanos.html">contact us  </a></li>
   &nbsp;
   </ul>
   </nav>
-		<aside>
-  <blockquote>Primer Elemento</blockquote>
-  <blockquote>Segundo Elemento</blockquote>
-  <blockquote>Tercer Elemento</blockquote>
-  </aside>
-  <section>
-    <article>
-	<figure>
-	<figcaption>¿Quienes somos?</figcaption>
-	</figure>
-    <hgroup>Misión</hgroup>
-<p>Nuestra misión es convertirnos en el centro de referencia en la innovación del mundo de las plantas en infusión,
-cultivando nuestra pasión por aprender.</p>
-	</article>
-	<article>
-	<hgroup>
-	Valores
-	</hgroup>
-	<p>Somos un ecosistema global en el que compartir conocimientos y experiencias entre las personas interesadas en llevar una vida sana. El Amor despierta nuestra curiosidad.
-Somos una empresa permeable. Aprendemos a incorporar la inteligencia colectiva en nuestra organización. Escuchamos para aprender.
-Somos una empresa de exploradores. Rodeados de personas creativas capaces de "Desaprender para construir". Hemos aprendido a tolerar el fracaso.
-Somos una empresa íntegra, transparente y sincera.
-Buscamos autenticidad, calidad, seguridad y efectividad en lo que hacemos.
-Somos una empresa en la que la satisfacción equivale a pensar en los demás.
-Creemos que el negocio y la implicación social son partes inseparables
-Queremos aportar valor a la sociedad y fomentar la vida sana. Queremos escribir cada día una nueva historia con nuestros clientes.
-Compartir experiencias y que cada uno elija y viva la vida que quiera vivir.
-Somos una empresa que contagiamos emociones para aprender y aprendemos para cambiar.</p>
-	<hgroup>
-		Logo
-	</hgroup>
-	<img src="3.jpg" width="500" height="250" />
-  </section>
+  <article>
+    <div class="content-all">
+        <div class="content-carrousel">
+        <figure><p>Funcionales</p><img src="ima/1.jpg"/ > </figure>
+    <figure><p>Luxury</p><img src="ima/2.jpg"></figure>
+    <figure><p>Ayurvédicas</p><img src="ima/e.jpg"></figure>
+    <figure><p>Food Service</p><img src="ima/4.jpg"></figure>
+    <figure><p>Premium</p><img src="ima/5.jpg"></figure>
+    <figure><p>Tisanas ecologicas</p><img src="ima/7.jpg"></figure>
+    <figure><p>Manasul</p><img src="ima/8.jpg"></figure>
+    <figure><p>Infusiones Tradicionales</p><img src="ima/6.jpg"></figure>
+    <figure><p>Helps</p><img src="ima/9.jpg"></figure>
+  </div>
+  </div>
   <footer id="foot1">
     <p><address>Mariory Sharisa Acevedo Santos  2020, Villa Nueva, Guatemala-C. 2020. Pharmadus Botanicals</address><small>Derechos Reservados</small></p>
   </footer>
