--- a/contactanos.html
+++ b/contactanos.html
@@ -10,7 +10,7 @@
 		<nav>
 		<nav>
   <ul>
-  <li id="pio"><a href="index.html">Home</a></li>
+  <li id="pio"><a href="menu.html">Home</a></li>
   &nbsp;
   <li id="pio"><a href="aboutwe.html">About company</a></li>
   &nbsp;
