--- a/productsand.html
+++ b/productsand.html
@@ -8,7 +8,7 @@
 		<header><h2>Este es el sitio web de Pharmadus Botanicals</h2> <h1>Pharmadus Botanicals</h1></header>
 		<nav>
   <ul>
-  <li id="pio"><a href="index.html">Home</a></li>
+  <li id="pio"><a href="menu.html">Home</a></li>
   &nbsp;
   <li id="pio"><a href="aboutwe.html">About company</a></li>
   &nbsp;
