--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 	<script>
 		function comprobarClave(){
 			clave1 = document.f1.clave1.value
-			clave2 = document.f2.clave2.value
+			clave2 = document.f1.clave2.value
 
-			if (clave1 == "mariory" && clave2 =="acevedo"){
-				alert("Los datos Coinciden...\n Bienvenido");
+			if (clave1 == "mariory" && clave2 == "acevedo"){
+				alert("Los Datos Coinciden...\n Bienvenido");
 				var href = "menu.html";
 				window.location=href;
 				}
 
 			else{
-				alert("Los datos son distintos...\nIntentalo nuevamente.");
+				alert("Las dos claves son distintas...\nIntentalo nuevamente.");
 				var href = "index.html";
 				window.location=href;
 			};
@@ -22,16 +22,17 @@
 </script>
 </head>
 <body>
-<h1> Validar  si la contraseña y la repeticion de constraseñas son iguales</h1>
+<h1> Validar  si la contraseña y la repetición de constraseña son iguales</h1>
 <br>
-Escribe la contraseña  dos veces,una en cada campo  y pulsa el boton 
+Escribe una supuesta contraseña  dos veces,una en cada campo,  y pulsa el boton. Javascript  te dirá si las dos son iguales. 
 <br>
 <form action="" name="f1">
-contraseña: <input type="password" name="clave1" size="20">
+Contraseña: <input type="password" name="clave1" size="20">
 <br>
-repite contraseña: <input type="password" name="clave2" size="20">
+Repite contraseña: <input type="password" name="clave2" size="20">
 <br>
 <input type="button" value="Comprobar si son iguales" onClick="comprobarClave()">
+
 </form>
 </body>
 </html>
