--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Validacion de formulario</title>
+	<link rel="stylesheet" type="text/css" href="piña.css"/>
 	<script>
 		function comprobarClave(){
 			clave1 = document.f1.clave1.value
@@ -21,10 +22,10 @@
 		}
 </script>
 </head>
-<body>
-<h1> Validar  si la contraseña y la repetición de constraseña son iguales</h1>
+<body background="blue">
+<center><h1>Validar  si la contraseña y la repetición de constraseña son iguales</h1></center>
 <br>
-Escribe una supuesta contraseña  dos veces,una en cada campo,  y pulsa el boton. Javascript  te dirá si las dos son iguales. 
+<p>Escribe una supuesta contraseña  dos veces,una en cada campo,  y pulsa el boton. Javascript  te dirá si las dos son iguales.</p> 
 <br>
 <form action="" name="f1">
 Contraseña: <input type="password" name="clave1" size="20">
