--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			clave1 = document.f1.clave1.value
 			clave2 = document.f1.clave2.value
 
-			if (clave1 == "mariory" && clave2 == "acevedo"){
+			if (clave1 == "Mariory" && clave2 == "Acevedo"){
 				alert("Los Datos Coinciden...\n Bienvenido");
 				var href = "menu.html";
 				window.location=href;
@@ -23,14 +23,14 @@
 </script>
 </head>
 <body background="blue">
-<center><h1>Validar  si la contraseña y la repetición de constraseña son iguales</h1></center>
+<center><h1>Ingresa el nombre de usuario</h1></center>
 <br>
-<p>Escribe una supuesta contraseña  dos veces,una en cada campo,  y pulsa el boton. Javascript  te dirá si las dos son iguales.</p> 
+<p>Escribe una supuesta contraseña  dos veces,una en cada campo,  y pulsa el botón. .</p> 
 <br>
 <form action="" name="f1">
 Contraseña: <input type="password" name="clave1" size="20">
 <br>
-Repite contraseña: <input type="password" name="clave2" size="20">
+Confirma tu contraseña: <input type="password" name="clave2" size="20">
 <br>
 <input type="button" value="Comprobar si son iguales" onClick="comprobarClave()">
 
