--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			clave2 = document.f1.clave2.value
 
 			if (clave1 == "Mariory" && clave2 == "Acevedo"){
-				alert("Los Datos Coinciden...\n Bienvenido");
+				alert("Los Datos Coinciden...\n Bienvenido a nuestro sitio web");
 				var href = "menu.html";
 				window.location=href;
 				}
@@ -25,7 +25,7 @@
 <body background="blue">
 <center><h1>Ingresa el nombre de usuario</h1></center>
 <br>
-<p>Escribe una supuesta contraseña  dos veces,una en cada campo,  y pulsa el botón. .</p> 
+<p>Escribe una supuesta contraseña  dos veces,una en cada campo,  y pulsa el botón...</p> 
 <br>
 <form action="" name="f1">
 Contraseña: <input type="password" name="clave1" size="20">
