--- a/index.html
+++ b/index.html
@@ -22,18 +22,17 @@
 		}
 </script>
 </head>
-<body background="blue">
+<body >
 <center><h1>Ingresa el nombre de usuario</h1></center>
 <br>
 <p>Escribe una supuesta contraseña  dos veces,una en cada campo,  y pulsa el botón...</p> 
 <br>
 <form action="" name="f1">
-Contraseña: <input type="password" name="clave1" size="20">
+<p>Contraseña:</p> <input type="password" name="clave1" size="20">
 <br>
-Confirma tu contraseña: <input type="password" name="clave2" size="20">
+<p>Confirma tu contraseña:</p> <input type="password" name="clave2" size="20">
 <br>
 <input type="button" value="Comprobar si son iguales" onClick="comprobarClave()">
-
 </form>
 </body>
 </html>
