--- a/menu.html
+++ b/menu.html
@@ -20,6 +20,8 @@
   &nbsp;
   <li id="pio"><a href="contactanos.html">Contact us  </a></li>
   &nbsp;
+  <li id="pio"><a href="registro.html">Registro</a></li>
+  &nbsp;
   </ul>
   </nav>
   <aside>
