--- a/productsand.html
+++ b/productsand.html
@@ -16,6 +16,8 @@
   &nbsp;
   <li id="pio"><a href="contactanos.html">contact us  </a></li>
   &nbsp;
+  <li id="pio"><a href="registro.html">Registro</a></li>
+  &nbsp;
   </ul>
   </nav>
   <article>
