--- a/aboutwe.html
+++ b/aboutwe.html
@@ -17,6 +17,8 @@
   &nbsp;
   <li id="pio"><a href="contactanos.html">Contact us  </a></li>
   &nbsp;
+  <li id="pio"><a href="registro.html">Registro</a></li>
+  &nbsp;
   </ul>
   </nav>
 		<aside>
