--- a/registro.html
+++ b/registro.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Formulario de registro</title>
 <link rel="stylesheet" type="text/css" href="piña.css"/>
-<link rel="stylesheet" type="text/css" href="dcss\uva.css"/>
+<link rel="stylesheet" type="text/css" href="sandia.css"/>
 </head>
 <body>
 <header>
@@ -40,7 +40,7 @@
 <br>
 <label for="sueldo">Sueldo<span><em>(requerido)</em></span></label>
 <input type="text" name="Sueldo" class="form-input" required/>
-<br>
+<br>  
 <label for="edad">Edad<span><em>(requerido)</em></span></label>
 <input type="text" name="Edad" class="form-input" required/>
 <br>
@@ -49,10 +49,10 @@
 <br>
 <input type="reset" value="Borrar" />
 <button onClick="alert('¡Hola, es un gusto atenderle!')">Saludar</button>
-Comentarios:
+<p>Comentarios:</p>
 <br>
 <textarea name=comentario rows=5 cols=54 wrap=virtual></textarea><p>
-<center><input type="image" src="1.png"  height="80" class="form-btn"  name="suscribirse"  value="suscribirse"/> </center>
+<center><input type="image" src="r.png"  height="80" class="form-btn"  name="suscribirse"  value="suscribirse"/> </center>
 </p>
 </form>
 </div>
