--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </script>
 </head>
 <body >
-<center><h1>Ingresa el nombre de usuario</h1></center>
+<center><h1>Ingresa tú nombre de usuario</h1></center>
 <br>
 <p>Escribe una supuesta contraseña  dos veces,una en cada campo,  y pulsa el botón...</p> 
 <br>
@@ -32,7 +32,7 @@
 <br>
 <p>Confirma tu contraseña:</p> <input type="password" name="clave2" size="20">
 <br>
-<input type="button" value="Comprobar si son iguales" onClick="comprobarClave()">
+<input type="button" value="Verifica" onClick="comprobarClave()">
 </form>
 </body>
 </html>
